<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time To Go</string>
    <string name="hello_world">Hello world!</string>
    <string name="event_manager_button">Event Manager</string>
    <string name="event_manager">This is the Event Manager</string>
    <string name="user_prefs_button">User Preferences</string>
    <string name="user_prefs">This is the User Preferences</string>
    <string name="address_book_button">Address Book</string>
    <string name="address_book">This is the Address Book</string>
    <string name="contact_list_button">Contact List</string>
    <string name="contact_list">This is the Contact List</string>
    <string name="create_event_button">Create Event</string>
    <string name="create_address_button">Add Address</string>
    <string name="create_contact_button">Create Contact</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_event_notes">Enter Event Notes</string>
    <string name="enter_address_name">Enter Address Name</string>
    <string name="enter_address_notes">Enter Address Notes</string>
    <string name="enter_address_location">Enter Location</string>
    <string name="enter_contact_name">Enter Contact Name</string>
    <string name="enter_contact_email">Enter Contact Email</string>
    <string name="enter_contact_notes">Enter Contact Notes</string>
    <string name="enter_contact_phone_number">Enter Contact Phone Number</string>
    <string name="create_button">Create</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_address_book">AddressBook</string>
    <string name="title_activity_contact_list">ContactList</string>
    <string name="title_activity_event_manager">EventManager</string>
    <string name="title_activity_event_info">EventInfo</string>
    <string name="title_activity_address_info">AddressInfo</string>
    <string name="title_activity_contact_info">ContactInfo</string>
    <string name="title_activity_quick_texts">QuickTextsManager</string>
    <string name="save_events_button">Save Events</string>
    <string name="stop_alarm_button">Stop Alarm</string>
    <string name="create_alarm_button">Create Alarm</string>
    <string name="enter_event_date">Enter Event Date (month#/day#/year####)</string>
    <string name="enter_event_time">Enter Event Time (hour:minutes)</string>
    <string name="enter_start_address">Enter Start Address</string>
    <string name="enter_event_address">Enter Event Address</string>
    <string name="event_address_button">From List</string>
    <string name="enter_event_contacts">Enter Event Contacts (; separated)</string>
    <string name="start_trip_button">Start Trip</string>
    <string name="clear_addresses_database">Clear Addresses</string>
    <string name="clear_contacts_database">Clear Contacts</string>
    <string name="clear_events_database">Clear Events</string>
    <string name="title_activity_alarm_receiver">AlarmReceiver</string>
    <string name="create_text_button">New Text</string>
    <string name="title_activity_en_route">EnRoute</string>
    <string name="action_settings">Settings</string>
    <string name="digital_clock">DigitalClock</string>
    <string name="time_me">Time Me</string>
    <string name="i_am_here">I\'m Here</string>
    <string name="i_will_be_late">I Will Be Late</string>
    <string name="title_activity_etacalc">ETACalc</string>
    <string name="calculate_now_button">Calculate Now</string>
    <string name="clear_travel_times_database">Clear Travel Times</string>
    <string name="enter_guess_time">Enter Travel Time (First Time Only)</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="delete_button">Remove</string>
    <string name="title_activity_quick_text_info">QuickTextInfo</string>
    <string name="enter_quick_text">Enter Quick Text</string>
	<string name="create_quick_text_button">Create</string>
    <string name="clear_quick_texts_database">Clear Quick Text Database</string>

</resources>